# EdgeGuard

./: .gitignore  MQTT.md  README.md  schema.sql
.serena/: project.yml
ai-models/: README.md  pyproject.toml  requirements.txt
ai-models/src/edgeguard_models/: __init__.py  mqtt_inference.py
hardware/: README.md
hardware/EdgeGuardDevice/: EdgeGuardDevice.ino  config.h  device.h  libs.h  mqtt.h  sensors.h
mini-app/: check-db.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  seed.js  server.js  update-css.cjs
mini-app/backend/: index.js
mini-app/backend/routes/: images.js  mqtt.js
mini-app/backend/services/: image-store.js  mqtt-service.js  supabase-service.js
mini-app/scripts/: run-example.mjs
mini-app/src/app/: globals.css  layout.tsx  page.tsx
mini-app/src/app/api/alarm/: route.ts
mini-app/src/app/api/cards/: route.ts
mini-app/src/app/api/door/: route.ts
mini-app/src/app/logs/: page.tsx
mini-app/src/app/settings/: page.tsx
mini-app/src/components/icons/: FilledIcons.tsx
mini-app/src/components/layout/: AppShell.tsx  BottomNav.tsx  DesktopSidebar.tsx
mini-app/src/components/mascot/: CatMascot.tsx
mini-app/src/hooks/: useSwipe.ts  useTelegram.ts
mini-app/src/lib/: api.ts  example-flow.ts  mock-data.ts  runtime-settings.ts  server-auth.ts  supabase.ts  telegram.ts
mini-app/src/types/: index.ts
server/: .env.example  README.md  package-lock.json  package.json  supabase-schema.sql
server/src/: config.js  index.js
server/src/services/: image-store.js  supabase-service.js  telegram.js
(+6 files in other folders)
