[project]
name = "edgeguard-models"
version = "0.1.0"
description = "AI model training and MQTT inference workers for EdgeGuard"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.4.2",
  "numpy>=1.26.4",
  "paho-mqtt>=2.1.0",
  "pandas>=2.2.2",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]
